--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     text-decoration: none;
 }
 body{
-    background: #F1F1F1;
+    background: #F4F3F3;
 }
 p{
     color:black;
@@ -22,7 +22,7 @@ html{
     width: 10px;
 }
 ::-w#4F2FA9ebkit-scrollbar-track {
-    background: #f1f1f1;
+    background: #F4F3F3;
 }
 ::-webkit-scrollbar-thumb {
     background: #888;
@@ -72,7 +72,7 @@ section .title::before{
     left: 50%;
     width: 180px;
     height: 3px;
-    background: white;
+    background: #F4F3F3;
     transform: translateX(-50%);
 }
 section .title::after{
@@ -80,9 +80,9 @@ section .title::after{
     bottom: -8px;
     left: 50%;
     font-size: 20px;
-    color: #725bb0;
+    color: #0097B2;
     padding: 0 5px;
-    background: #fff;
+    background: #F4F3F3;
     transform: translateX(-50%);
 }
 /* navbar styling */
@@ -102,7 +102,7 @@ section .title::after{
 }
 .navbar.sticky{
     padding: 30px 0 20 0;
-    background: white;
+    background: #F4F3F3;
 }
 .navbar .max-width{
     display: flex;
@@ -114,11 +114,11 @@ section .title::after{
     max-height: 100%;
 }
 .navbar .logo a span{
-    color: #725bb0;
+    color: #0097B2;
     transition: all 0.3s ease;
 }
 .navbar.sticky .logo a span{
-    color: white;
+    color: ;
 }
 .navbar .menu li{
     list-style: none;
@@ -133,14 +133,14 @@ section .title::after{
     transition: color 0.3s ease;
 }
 .navbar .menu li a:hover{
-    color: #725bb0;
+    color: #0097B2;
 }
 .navbar.sticky .menu li a:hover{
-    color: #725bb0;
+    color: #0097B2;
 }
 /* menu btn styling */
 .menu-btn{
-    color: #725bb0;
+    color: #0097B2;
     font-size: 23px;
     cursor: pointer;
     display: none;
@@ -149,12 +149,12 @@ section .title::after{
     position: fixed;
     height: 45px;
     width: 42px;
-    background: #725bb0;
+    background:#0097B2;
     right: 30px;
     bottom: 10px;
     text-align: center;
     line-height: 45px;
-    color: white;
+    color: #F4F3F3;
     z-index: 9999;
     font-size: 30px;
     border-radius: 6px;
@@ -198,7 +198,7 @@ section .title::after{
     margin-bottom: 5px;
 }
 .home .home-content .text-2-1{
-    background-color:rgba(93, 64, 175, 0.22);
+    background-color: #BAD4D8;
     display:inline-block;
     height: 65px;
     padding-left: 10px;
@@ -211,23 +211,23 @@ section .title::after{
 }
 
 .home .home-content .text-3 span{
-    color: #725bb0;
+    color: #0097B2;
     font-weight: 500;
 }
 .home .home-content a{
     display: inline-block;
-    background: #725bb0;
-    color: white;
+    background: #5BA1AD;
+    color: #F4F3F3;
     font-size: 20px;
     padding: 8px 10px;
     margin-top: 20px;
     font-weight: 400;
     border-radius: 6px;
-    border: 2px solid #725bb0;
+    border: 2px solid #5BA1AD;
     transition: all 0.3s ease;
 }
 .home .home-content a:hover{
-    color: #725bb0;
+    color: #0097B2;
     background: none;
 }
 /* about section styling */
@@ -250,7 +250,7 @@ section .title::after{
     margin-bottom: 10px;
 }
 .about .about-content .right .text span{
-    color: #725bb0;
+    color: #0097B2;
 }
 
 .about .about-content .right a{
@@ -258,7 +258,7 @@ section .title::after{
     transition: all 0.3s ease;
 }
 .about .about-content .right a:hover{
-    color: #725bb0;
+    color: #0097B2;
     background: none;
 }
 /* work section styling */
@@ -286,7 +286,7 @@ section .title::after{
     margin-bottom: 20px;
 }
 .work .serv-content .card:hover{
-    background: #725bb0;;
+    background: #0097B2;;
     content: "";
 }
 .work .serv-content .card:hover::after{
@@ -350,7 +350,7 @@ section .title::after{
 }
 .connect .connect-content .row i{
     font-size: 25px;
-    color: #725bb0;
+    color: #0097B2;
 }
 .connect .connect-content .row li{
     list-style: none;
@@ -469,7 +469,7 @@ section .title::after{
   transition: all 0.3s ease;
 }
 .right form .button-area button:hover{
-  color: #725bb0;
+  color: #0097B2;
   background: none;
 }
 /* footer section styling */
@@ -480,7 +480,7 @@ footer{
     text-align: center;
 }
 footer span a{
-    color: blueviolet;
+    color: #0097B2;
     text-decoration: none;
 }
 footer span a:hover{
@@ -736,7 +736,7 @@ canvas {
     right: 0;
     bottom: 0;
     vertical-align: middle;
-    background-color: #725bb0;
+    background-color: #0097B2;
     display: none;
 }
 
@@ -756,7 +756,7 @@ canvas {
     right: 0;
     bottom: 0;
     vertical-align: middle;
-    background-color: #725bb0;
+    background-color: #0097B2;
     opacity:0.98;
     display: none;
 }
