--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ section .title::after {
   bottom: -8px;
   left: 50%;
   font-size: 20px;
-  color: #0097b2;
+  color: #c3b1e1;
   padding: 0 5px;
   background: #f4f3f3;
   transform: translateX(-50%);
@@ -127,11 +127,11 @@ section .title::after {
   max-height: 100%;
 }
 .navbar .logo a span {
-  color: #0097b2;
+  color: #c3b1e1;
   transition: all 0.3s ease;
 }
 .navbar.sticky .logo a span {
-  color: ;
+  color:;
 }
 .navbar .menu li {
   list-style: none;
@@ -146,14 +146,14 @@ section .title::after {
   transition: color 0.3s ease;
 }
 .navbar .menu li a:hover {
-  color: #0097b2;
+  color: #c3b1e1;
 }
 .navbar.sticky .menu li a:hover {
-  color: #0097b2;
+  color: #c3b1e1;
 }
 /* menu btn styling */
 .menu-btn {
-  color: #0097b2;
+  color: #c3b1e1;
   font-size: 23px;
   cursor: pointer;
   display: none;
@@ -162,7 +162,7 @@ section .title::after {
   position: fixed;
   height: 45px;
   width: 42px;
-  background: #0097b2;
+  background: #c3b1e1;
   right: 30px;
   bottom: 10px;
   text-align: center;
@@ -211,7 +211,7 @@ section .title::after {
   margin-bottom: 5px;
 }
 .home .home-content .text-2-1 {
-  background-color: #bad4d8;
+  background-color: #c3b1e1;
   display: inline-block;
   height: 65px;
   padding-left: 10px;
@@ -224,23 +224,23 @@ section .title::after {
 }
 
 .home .home-content .text-3 span {
-  color: #0097b2;
+  color: #674ea7;
   font-weight: 500;
 }
 .home .home-content a {
   display: inline-block;
-  background: #5ba1ad;
+  background: #674ea7;
   color: #f4f3f3;
   font-size: 20px;
   padding: 8px 10px;
   margin-top: 20px;
   font-weight: 400;
   border-radius: 6px;
-  border: 2px solid #5ba1ad;
+  border: 2px solid#674ea7;
   transition: all 0.3s ease;
 }
 .home .home-content a:hover {
-  color: #0097b2;
+  color: #c3b1e1;
   background: none;
 }
 /* about section styling */
@@ -263,7 +263,7 @@ section .title::after {
   margin-bottom: 10px;
 }
 .about .about-content .right .text span {
-  color: #0097b2;
+  color: #674ea7;
 }
 
 .about .about-content .right a {
@@ -271,7 +271,7 @@ section .title::after {
   transition: all 0.3s ease;
 }
 .about .about-content .right a:hover {
-  color: #0097b2;
+  color: #674ea7;
   background: none;
 }
 /* work section styling */
@@ -645,6 +645,13 @@ p .uhn-link {
     #026096 66.67%,
     #000000 100%
   );
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+p .d2l-link {
+  background: linear-gradient(45deg, #11551e 50%, #db8f2b 100%);
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
